fixed settings bar from not being visible in small devices

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h1 {
 
 .main-container {
     display: flex;
+    flex-wrap: wrap;
     gap: 50px;
 
     padding: 40px 20px;
